2010-11-15  Martin Jambor  <mjambor@suse.cz>

PR tree-optimization/46349
	* tree-sra.c (contains_bitfld_comp_ref_p): New function.
	(contains_vce_or_bfcref_p): Likewise.
	(sra_modify_assign): Use them.

	* testsuite/gnat.dg/opt9.adb: New file.
	* testsuite/gnat.dg/opt9_pkg.ads: Likewise



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@166759 138bc75d-0d04-0410-961f-82ee72b054a4